test/fixtures/diagnostics/type-checker/negative/record-spread-nonrecord/input.tysh
namespace Samples.RecordSpread

record Customer(Name: string, Age: int)

fun invalid(): Customer = { ...1, Name: "Ada", Age: 36 }
